[package]
name = "git-hovel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.40"
maud = { version = "*", features = ["axum"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "uuid" ] }
dotenv = "0.15.0"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
russh = { version = "0.39.0", features = ["openssl"] }
async-trait = "0.1.74"
russh-keys = "0.38.0"
